# https---github.com-1homeboi-hw57

./: db.sqlite3  pyproject.toml
eshop/: settings.py  urls.py
webapi/: models.py  urls.py  views.py
webapi/migrations/: 0001_initial.py
